moving screencaps into image folder

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <a href="https://github.com/mcdwayne/SeeDiffs/pull/1/files"> 
-  <img src='on-persistance.png'> 
+  <img src='images/on-persistance.png'> 
   <br> 
   On Persistence 
 </a>
