--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 
 
-<a href="https://github.com/mcdwayne/SeeDiffs/pull/1/files"> 
-  <img src='images/on-persistance.png'> 
+<a href="https://github.com/mcdwayne/SeeDiffs/pull/3/files"> 
+  <img src='images/Intellectual-Curiosity.png'> 
   <br> 
   On Persistence 
 </a>
