corrected post name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a href="https://github.com/mcdwayne/SeeDiffs/pull/3/files"> 
   <img src='images/Intellectual-Curiosity.png'> 
   <br> 
-  On Persistence 
+ Intelectual Curriosity 
 </a>
 
 <br>
