--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
 <a href="https://github.com/mcdwayne/SeeDiffs/pull/3/files"> 
   <img src='images/Intellectual-Curiosity.png'> 
   <br> 
- Intelectual Curriosity 
+ Intellectual Curiosity 
 </a>
 
 <br>
 <br>
 Archive:
+
+<br>
+<a href="https://github.com/mcdwayne/SeeDiffs/pull/3/files">  Intelectual Curiosity - 2019-03-13 </a>
 
 <br>
 <a href="https://github.com/mcdwayne/SeeDiffs/pull/1/files"> On Persistence - 2019-02-28 <a>
