Added alt text and <main> attributes for a11y

--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
 
  </script>
 </head>
+<nav>
+  </nav>
 
-
-
+<main>
 <a href="https://github.com/mcdwayne/SeeDiffs/pull/3/files"> 
-  <img src='images/Intellectual-Curiosity.png'> 
+  <img src='images/Intellectual-Curiosity.png' alt="a screenshot of the linked diff on GitHub, that one should be accessible"> 
   <br> 
  Intellectual Curiosity 
 </a>
 
 <br>
 <br>
+  
 Archive:
 
 <br>
@@ -47,3 +49,5 @@ Archive:
 <a href="https://github.com/mcdwayne/SeeDiffs/pull/1/files"> On Persistence - 2019-02-28 <a>
 <br>
 
+
+  </main>
