--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 Archive:
 
 <br>
-<a href="https://github.com/mcdwayne/SeeDiffs/pull/3/files">  Intelectual Curiosity - 2019-03-13 </a>
+<a href="https://github.com/mcdwayne/SeeDiffs/pull/3/files"> Intellectual Curiosity - 2019-03-13 </a>
 
 <br>
-<a href="https://github.com/mcdwayne/SeeDiffs/pull/1/files"> On Persistence - 2019-02-28 <a>
+<a href="https://github.com/mcdwayne/SeeDiffs/pull/1/files"> On Persistence - 2019-02-28 </a>
 <br>
 
 
